# obs-studio

./: CMakeLists.txt
CLI/: CMakeLists.txt  README  list.c  list.h  obs-cli.c
libobs/: CMakeLists.txt  obs-nix.c
libobs-opengl/: CMakeLists.txt  gl-egl.c  gl-osmesa.c
plugins/linux-capture/: CMakeLists.txt
